test/fail/unterminated-simvar.rnp
(X:Y
---
SyntaxError: Unexpected end of simvar
 --> fail/unterminated-simvar.rnp:1:5
  |
1 | (X:Y
  |     ^ Unexpected end of simvar
  |
